--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cryptocompare": "^1.0.0",
     "fuzzy": "^0.1.3",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-highcharts": "^16.0.2",
